# warehouse

./: .dockerignore  .gitignore  LICENSE  command.py  docker-compose.yaml  package.json  pyproject.toml  tailwind.config.js
helper/: models.py
mysite/: settings.py
templates/: company_profile.html
tests/fixtures/: account.py
warehouse/: manager.py  models.py  urls.py  views.py
warehouse/tests/: gudang.py  kelipatan.py  test_gudang.py  test_input_warehouse_models.py  test_kelipatan.py
warehouse/tests/tests_tools/: fixtures.py
