[tool.poetry]
name = "company-project"
version = "0.1.0"
description = ""
authors = ["theqin <theqin69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
pytest-django = "^4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
